--- a/gateway.yaml
+++ b/gateway.yaml
@@ -2,41 +2,40 @@ apiVersion: "xbank/v1beta1"
 kind: "Gateway"
 metadata:
   name: "repo5"
-  version: "v1"
-  minorVersion: "1.0"
-  teamName: "B-Team"
+  version: "v2"
+  minorVersion: "0.0"
+  teamName: "team"
 spec:
   muhtar: "1.6.6"
   encumen: "1.2.3"
-  contextPath: "/test"
+  contextPath: "/testt"
   operations:
-  - name: "test"
-    description: "zafer"
-    httpVerb: "GET"
-    route: "/path"
+  - name: "zafer"
+    description: "test"
+    httpVerb: "POST"
+    route: "/test"
     target:
       httpVerb: "GET"
       host: "test"
-      timeoutInSeconds: 12323
+      timeoutInSeconds: 1233
       transformationHandledExceptionCodes:
-      - 304
       - 303
-      - 400
+      - 307
       route:
         type: "header"
         value: "test"
     transformation:
       request:
-        filepath: "/test/test/transformation/request.mjs"
+        filepath: "/testt/zafer/transformation/request.mjs"
         timeoutInMilliSeconds: 3000
       response:
-        filepath: "/test/test/transformation/response.mjs"
+        filepath: "/testt/zafer/transformation/response.mjs"
         timeoutInMilliSeconds: 3000
     validation:
       request:
-        filepath: "/test/test/validation/request.mjs"
+        filepath: "/testt/zafer/validation/request.mjs"
       response:
-        filepath: "/test/test/validation/response.mjs"
+        filepath: "/testt/zafer/validation/response.mjs"
   transformationRepo:
     url: "https://github.com/zaferbozkurtsavana/apigw-repo5"
-    tag: "v1.0.0"
+    tag: "v1.0.1"
